# cargo-script

./: .travis.yml  Cargo.toml  README.md  build.rs
src/: consts.rs  error.rs  file_assoc.rs  main.rs  manifest.rs  platform.rs  templates.rs  util.rs  web.rs
tests/data/: script-2018-edition.rs
tests/tests/: expr.rs  script.rs  version.rs
tests/util/: mod.rs
