[package]
name = "cargo-script"
version = "0.2.9"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A Cargo subcommand designed to let people quickly and easily run Rust \"scripts\" which can make use of Cargo's package ecosystem."
repository = "https://github.com/DanielKeep/cargo-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]

build = "build.rs"

exclude = [
    "scripts/*",
    ".travis.yml",
]

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["chan"]

[dependencies]
chan = { version = "0.1.23", optional = true }
clap = "2.32.0"
env_logger = "0.4.2"
hoedown = "6.0.0"
itertools = "0.5.10" # version 0.6 incompatible with Rust < 1.12
lazy_static = "1.2.0"
log = "0.4.6"
open = "1.2.2"
regex = "1.0.2"
rustc-serialize = "0.3.24"
semver = "0.9.0"
shaman = "0.1.0"
time = "0.1.42"
toml = "0.4.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "combaseapi",
    "knownfolders",
    "minwindef",
    "ntdef",
    "shlobj",
    "shtypes",
    "winerror"
] }
winreg = "0.4.0"

[target.'cfg(unix)'.dependencies]
atty = "0.2.2"

[dev-dependencies]
gcc = "0.3.55"
scan-rules = "0.2.0"
tempdir = "0.3.7"

[profile.release]
lto = true
