[package]
name = "cargo-script"
version = "0.2.9"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A Cargo subcommand designed to let people quickly and easily run Rust \"scripts\" which can make use of Cargo's package ecosystem."
repository = "https://github.com/DanielKeep/cargo-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]

build = "build.rs"

exclude = [
    "scripts/*",
    ".travis.yml",
]

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["crossbeam-channel"]

[dependencies]
clap = "2.33.0"
crossbeam-channel = { version = "0.3.6", optional = true }
env_logger = "0.5.12"
hoedown = "6.0.0"
itertools = "0.8.0"
lazy_static = "1.3.0"
log = "0.4.6"
open = "1.2.3"
regex = "1.0.2"
semver = "0.9.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.37"
shaman = "0.1.0"
time = "0.1.42"
toml = "0.5.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = [
    "combaseapi",
    "knownfolders",
    "minwindef",
    "ntdef",
    "shlobj",
    "shtypes",
    "winerror"
] }
winreg = "0.6.0"

[target.'cfg(unix)'.dependencies]
atty = "0.2.11"

[dev-dependencies]
gcc = "0.3.55"
scan-rules = "0.2.0"
tempdir = "0.3.7"

[profile.release]
lto = true
