[package]
name = "cargo-script"
version = "0.2.9"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A Cargo subcommand designed to let people quickly and easily run Rust \"scripts\" which can make use of Cargo's package ecosystem."
repository = "https://github.com/DanielKeep/cargo-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]

build = "build.rs"

exclude = [
    "scripts/*",
    ".travis.yml",
]

edition = "2018"

[features]
default = ["suppress-cargo-output"]
suppress-cargo-output = ["crossbeam-channel"]

[dependencies]
clap = "2.33.0"
crossbeam-channel = { version = "0.4.2", optional = true }
env_logger = "0.7.1"
hoedown = "6.0.0"
itertools = "0.9.0"
lazy_static = "1.3.0"
log = "0.4.10"
open = "1.4.0"
regex = "1.3.7"
semver = "0.9.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.53"
shaman = "0.1.0"
time = { version = "0.2.7", features = ["std"] }
toml = "0.5.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = [
    "combaseapi",
    "knownfolders",
    "minwindef",
    "ntdef",
    "shlobj",
    "shtypes",
    "winerror"
] }
winreg = "0.6.0"

[target.'cfg(unix)'.dependencies]
atty = "0.2.14"

[dev-dependencies]
gcc = "0.3.55"
scan-rules = "0.2.0"
tempdir = "0.3.7"

[profile.release]
lto = true
